--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,37 @@
-Skip to content
- 
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@shdionis 
-2,795
-84,804 41,520 github/gitignore
- Code  Pull requests 86  Projects 0  Security  Insights
-gitignore/Global/JetBrains.gitignore
-@scadgek scadgek Add ignores for file-based projects (#2902)
-b5aa92c 25 days ago
-@bamapookie @thunsaker @samskiter @LazarusX @arcresu @akelsch @victorhaggqvist @DKroot @shiftkey @twhitbeck @tsteinholz @tomsquest @stuckj @ssinss @scadgek @rocketraman @RobertoNovelo @Cantido @petermorlion @OmarShaikh42 @nfcopier @meyerlasse @koppor @KenjiOhtsuka @jturmel @Nihlus
-69 lines (53 sloc)  1.41 KB
-    
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+*/.idea/*
+*/.idea/**/workspace.xml
+*/.idea/**/tasks.xml
+*/.idea/**/usage.statistics.xml
+*/.idea/**/dictionaries
+*/.idea/**/shelf
 
 # Generated files
-.idea/**/contentModel.xml
+*/.idea/**/contentModel.xml
 
 # Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
+*/.idea/**/dataSources/
+*/.idea/**/dataSources.ids
+*/.idea/**/dataSources.local.xml
+*/.idea/**/sqlDataSources.xml
+*/.idea/**/dynamic.xml
+*/.idea/**/uiDesigner.xml
+*/.idea/**/dbnavigator.xml
 
 # Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+*/.idea/**/gradle.xml
+*/.idea/**/libraries
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
+# */.idea/modules.xml
+# */.idea/*.iml
+# */.idea/modules
 # *.iml
 # *.ipr
 
@@ -57,22 +39,19 @@ b5aa92c 25 days ago
 cmake-build-*/
 
 # Mongo Explorer plugin
-.idea/**/mongoSettings.xml
+*/.idea/**/mongoSettings.xml
 
 # File-based project format
 *.iws
 
 # IntelliJ
-out/
+*/out/
 
 # mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
+*/.idea_modules/
 
 # Cursive Clojure plugin
-.idea/replstate.xml
+*/.idea/replstate.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
@@ -81,19 +60,7 @@ crashlytics-build.properties
 fabric.properties
 
 # Editor-based Rest Client
-.idea/httpRequests
+*/.idea/httpRequests
 
 # Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
-© 2019 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
+*/.idea/caches/build_file_checksums.ser
